🚀 Add comprehensive CI/CD pipeline
- 🧪 Test Suite: Automated testing for all components
- 🔒 Security Checks: Vulnerability scanning and code quality
- 🚀 Deployment: Automated deployment to production
- 📦 Release Management: Versioned releases with Docker tagging
- 🔄 Updated container publishing workflow for master branch

All workflows include AGPL-3.0 license protection and comprehensive testing.

--- a/.github/workflows/publish-containers.yml
+++ b/.github/workflows/publish-containers.yml
@@ -2,10 +2,10 @@ name: 🚀 Publish Docker Containers to GitHub Registry
 
 on:
   push:
-    branches: [ main, production ]
+    branches: [ main, master, production ]
     tags: [ 'v*' ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
 
 env:
   REGISTRY: ghcr.io
